--- a/templates/CTDList.html
+++ b/templates/CTDList.html
@@ -6,6 +6,7 @@
 <body>
 
 <script>
+// Consider using jQuery to do DOM manipulation.
 function sortTable(n) {
   var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
   table = document.getElementById("CTD_list");
