Make comments more appropriate for live code review

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,3 +59,5 @@ initial term to maturity and remaining time to maturity.
     <p>Designed by <b>Danny Wagstaff</b> in 2018
     </p>
 </div>
+
+<!-- Can we make this page well-formed? -->
