started snake-casing

--- a/templates/CTDList.html
+++ b/templates/CTDList.html
@@ -19,7 +19,7 @@
 		{% endfor %}
 	</tbody></table>
 	<br/>
-	<form method="GET" action="/bondapp2">
+	<form method="GET" action="/">
 		<input type="submit" value="Back" />
 	</form>
   <script src="{{ url_for('static', filename='sortTable.js') }}"></script>
