Added price, yield
Added price info from price file (in /static.closePx)
Added functions to bond.py to calculate yield, given a price

--- a/static/style.css
+++ b/static/style.css
@@ -25,3 +25,9 @@ p   {
     margin-left: 2%;
     margin-right: 2%;
 }
+#CTD_list tr:nth-child(even) {
+  background-color: #ddd;
+}
+#CTD_list tr:nth-child(odd) {
+  background-color: #fff;
+}
