snake_cased variables
made variables snake case; moved unused main function to test_bond.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,9 @@
 				var myDate = new Date();
 				var addMonths = (myDate.getMonth() + (3 * i)) % 12;
 				console.log("addMonths=" + addMonths);
+				if (myDate.getMonth() + (3 * i) >= 12) {
+					myDate.setYear(myDate.getFullYear() + 1);
+				}
 				myDate.setMonth(addMonths);
 				// Consider using a template literal here
 				var newConExp = [arrFrontContract[myDate.getMonth()],
