--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@ initial term to maturity and remaining time to maturity.
 <div class="footer">
     <hr class="center96Pct">
     <hr class="center96Pct">
-    <p>Designed by <b>Danny Wagstaff</b> in 2018
+    <p>Designed by <em><a href="http://www.dannywagstaff.com" target="_blank">Danny Wagstaff</a></em> in 2018
     </p>
 </div>
 
